// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform-content returns the correct html for Markdown with a title and a link 1`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.md
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;min-height:60px;margin-bottom:0;width:100%;padding-right:5px;padding-left:5px"
      >
        <div class="row col-md-12"
             style="width:100%;padding-top:10px;padding-right:0px;padding-left:25px"
        >
          <h3 class="col-md-4"
              style="text-align:left;padding-right:0px;padding-bottom:20px;color:#fff"
          >
            Morty-Docs
          </h3>
        </div>
      </div>
      <div class="container">
        <h1 id="title-of-simple-contentmd">
          <a href="#title-of-simple-contentmd">
            Title of simple-content.md
          </a>
        </h1>
        <p>
          <a href="docs/file-to-publish.html">
            Link to MD in docs directory
          </a>
        </p>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <h3>
              What is Morty-Docs?
            </h3>
            <p>
              Link to
              <a href="https://github.com/bbc/morty-docs">
                Morty-docs
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;

exports[`Transform-content returns the correct html for a line of plain text 1`] = `
<html lang="en"
      style="min-height:100vh"
      data-reactroot
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <title>
      file-name.md
    </title>
    <link rel="stylesheet"
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
          crossorigin="anonymous"
    >
  </head>
  <body style="min-height:100vh">
    <div style="min-height:75vh;padding-bottom:20px">
      <div class="container"
           style="border:none;border-radius:0;background-color:#000;min-height:60px;margin-bottom:0;width:100%;padding-right:5px;padding-left:5px"
      >
        <div class="row col-md-12"
             style="width:100%;padding-top:10px;padding-right:0px;padding-left:25px"
        >
          <h3 class="col-md-4"
              style="text-align:left;padding-right:0px;padding-bottom:20px;color:#fff"
          >
            Morty-Docs
          </h3>
        </div>
      </div>
      <div class="container">
        <p>
          One line of plain text
        </p>
      </div>
    </div>
    <footer style="bottom:0;width:100%;background-color:#f5f5f5;padding:0 15px;box-sizing:border-box;min-height:25vh;position:relative"
            class="footer"
    >
      <div style="padding:1em 0 2em 0"
           class="container"
      >
        <div class="row">
          <div style="text-align:center"
               class="col-md-4 col-md-offset-4"
          >
            <h3>
              What is Morty-Docs?
            </h3>
            <p>
              Link to
              <a href="https://github.com/bbc/morty-docs">
                Morty-docs
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </footer>
  </body>
</html>
`;
